--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -106,17 +106,19 @@
     	height: 300px;
     	color: hsl(240,100%,25%);
         text-align: left;
+        display:inline-block;
         /*border: 1px black solid;*/
         
     }
     .skills{
     	box-sizing: border-box;
-    	margin: 30px 175px 30px 30px;
+    	margin: auto;
     	padding: 10px;
     	width: 50%;
     	height: 300px;
     	color: hsl(240,100%,25%);
         text-align: left;
+        display:inline-block;
         /*border: 1px black solid;*/
         float: left;
     }
@@ -178,7 +180,7 @@
        <p style="font: 15px verdana">With a passion for business, social media, and all things marketing, I have both the skill set and professional background necessary to dive deep into the marketing world. As an upbeat, self-motivated team player with excellent communication, I envision an exciting future in the industry. Browse my site to see all that I have to offer.</p>
     </div>
   </div>
- 
+
   <section id="section4" class="interests">
     <h2>(#section4) Section 4</h2>
     <p>content4</p>
